--- a/src/Styles/globalStyles.css
+++ b/src/Styles/globalStyles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@1..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 
+body {
+  background: #332E67
+}
+
 blockquote,
 body,
 button,
